[workspace]
members = [
    "echo-server",
    "forward-proxy",
    "mitm-proxy",
]
resolver = "2"

[profile.dev]
panic = "unwind"
overflow-checks = false
debug = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
panic = "unwind"
overflow-checks = false

[lints.rust]
unsafe_code = "forbid"