[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
http = "1.0.0"
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio = { version = "1.35.0", features = ["net", "rt", "macros", "rt-multi-thread", "parking_lot"] }
