[package]
name = "mitm-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
http-mitm-proxy = "0.3.0"
rcgen = "0.11.3"
tokio = { version = "1.35.0", features = ["full"] }
tokio-native-tls = "0.3.1"
